fix close icon overlap notification message

--- a/assets/sass/components/_notifications.scss
+++ b/assets/sass/components/_notifications.scss
@@ -41,7 +41,7 @@
     top: 0;
     left: 0;
     right: 0;
-    padding: 10px 25px;
+    padding: 10px 50px;
     text-align: center;
 
 
